Pre-merge fixes - Fixed header menu visual glitch - Removed login nav link - Fixed login form loader flicker

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -92,7 +92,7 @@ li {
 }
 
 .fade-in-top {
-  animation: fade-in-top 500ms ease-in-out forwards;
+  animation: fade-in-top 500ms ease-in-out;
 }
 
 @keyframes fade-in-zoom {
